Fix font sizing on mobile

--- a/main.scss
+++ b/main.scss
@@ -24,7 +24,7 @@ section {
 
 h1 {
     font-weight: bold;
-    font-size: 3.5rem;
+    font-size: 3rem;
 
     @include breakpoint($desktop) {
         font-size: 5rem;
@@ -44,7 +44,12 @@ h1 > a {
 }
 
 article > a {
-    font-size: 5rem;
+    font-size: 3rem;
+
+    @include breakpoint($desktop) {
+        font-size: 5rem;
+    }
+
     color: $base-color;
     display: block;
 }
